docs: add readme
123

123

--- a/.env.template
+++ b/.env.template
@@ -6,5 +6,12 @@ DB_NAME="YOUR_DB_NAME"
 
 SECRET_KEY="YOUR_SECRET_KEY"
 ACCESS_TOKEN_EXPIRE_MINUTES=30
-
 SYSTEM_TIMEOUT_SECOND=30
+
+OAUTH_REDIRECT_URI="http://localhost:8080/api/v1/oauth/google/login"
+
+GOOGLE_OAUTH_URI="https://accounts.google.com/o/oauth2/auth"
+GOOGLE_OAUTH_USERINFO_URI="https://www.googleapis.com/oauth2/v1/userinfo"
+GOOGLE_OAUTH_TOKEN_URI="https://oauth2.googleapis.com/token"
+GOOGLE_OAUTH_CLIENT_ID="YOUR_GOOGLE_OAUTH_CLIENT_ID"
+GOOGLE_OAUTH_CLIENT_SECRET="YOUR_GOOGLE_OAUTH_CLIENT_SECRET"
